[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "atklite"
version = "1.1.3"
authors = [
    { name="James Pleger", email="jpleger@gmail.com" },
    { name="Darren Spruell", email="phatbuckett@gmail.com" },
]
description = "Library to simplify process of gathering identifiable attributes about files."
readme = "README.md"
dependencies = [
    "python-magic",
    "ssdeep",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
atk-info = "atklite:cli"
file-info = "atklite:cli"

[project.urls]
"Homepage" = "https://github.com/jpleger/atklite"
